@@ -1465,7 +1465,6 @@ INSERT INTO items VALUES (18158,0,'','',10015,'Processor load15','system.cpu.loa
 INSERT INTO items VALUES (18159,0,'','',10015,'Processor load','system.cpu.load[,avg1]',5,7,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (18160,0,'','',10015,'Processor load5','system.cpu.load[,avg5]',10,7,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (18161,0,'','',10015,'CPU $2 time ($3)','system.cpu.util[,idle,avg1]',10,90,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
-INSERT INTO items VALUES (18162,0,'','',10015,'CPU $2 time ($3)','system.cpu.util[,nice,avg1]',10,90,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (18163,0,'','',10015,'CPU $2 time ($3)','system.cpu.util[,system,avg1]',10,90,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (18164,0,'','',10015,'CPU user time (avg1)','system.cpu.util[,user,avg1]',10,90,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
 INSERT INTO items VALUES (18165,0,'','',10015,'CPU $2 time ($3)','system.cpu.util[,iowait,avg1]',10,90,365,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','1','',0,'',NULL,NULL,'','','',0,0,'','','','',0,NULL,0,'',NULL,'','',0);
@@ -6943,7 +6942,6 @@ INSERT INTO items_applications VALUES (2146,136,18158);
 INSERT INTO items_applications VALUES (2148,136,18159);
 INSERT INTO items_applications VALUES (2150,136,18160);
 INSERT INTO items_applications VALUES (2152,136,18161);
-INSERT INTO items_applications VALUES (2154,136,18162);
 INSERT INTO items_applications VALUES (2156,136,18163);
 INSERT INTO items_applications VALUES (2158,136,18164);
 INSERT INTO items_applications VALUES (2160,136,18165);
@@ -6958,7 +6956,6 @@ INSERT INTO items_applications VALUES (2145,138,18158);
 INSERT INTO items_applications VALUES (2147,138,18159);
 INSERT INTO items_applications VALUES (2149,138,18160);
 INSERT INTO items_applications VALUES (2151,138,18161);
-INSERT INTO items_applications VALUES (2153,138,18162);
 INSERT INTO items_applications VALUES (2155,138,18163);
 INSERT INTO items_applications VALUES (2157,138,18164);
 INSERT INTO items_applications VALUES (2159,138,18165);
